--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,14 +10,14 @@
 </head>
 
 <body>
-    <h1 style="color: rgb(87, 68, 15); text-align: center; border:4px blue solid">LUIS FERNANDO MUÑOZ JARAMILLO</h1>
+    <h1>LUIS FERNANDO MUÑOZ JARAMILLO</h1>
+
     <div style="text-align: center;">
         <img src="images/Conan.jpg" alt="" srcset="" height="250"  style="border-radius: 50%;" width="250">
 
     </div>
 
-
-    <H2 style="text-align: center; color: rgb(87, 68, 15);  ">Colombien</H2>
+    <H2>Colombien</H2>
     <p style="color: rgb(87, 68, 15); text-align: center;">lfmunozja@cesde.net</p>
     <h3 style="color: rgb(87, 68, 15); float:none;text-align: center;">Téléphone:</h3> 
     <p style="color: rgb(87, 68, 15); text-align: center;">+57 323 324 60 35</p><br>
@@ -28,6 +29,8 @@
             <h4 style="color: rgb(87, 68, 15);">juin 2009 à sept. 2015</h4>
             <h4 style="color: rgb(87, 68, 15); ">Baccalauréat</h4>
             <p style="color: rgb(87, 68, 15); ">Proffeseur des langues</p>  <br>
+
+    
 
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22375.760713495623!2d-75.65408591872756!3d45.490547070278545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce1af5df09a369%3A0xd29253504056d9eb!2sStation%20Rapibus%20Labrosse!5e0!3m2!1ses!2sco!4v1677548527961!5m2!1ses!2sco" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
