--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
     </div>
 
-    <H2>Colombien</H2>
+    <H2 class="subtitulo1">Colombien</H2>
+    <button onclick="saludar()">saludar</button>
     <p style="color: rgb(87, 68, 15); text-align: center;">lfmunozja@cesde.net</p>
     <h3 style="color: rgb(87, 68, 15); float:none;text-align: center;">Téléphone:</h3> 
     <p style="color: rgb(87, 68, 15); text-align: center;">+57 323 324 60 35</p><br>
@@ -37,4 +38,7 @@
         
 
 </body>
+<script >function saludar(){
+    alert ("Hola Mundo")
+}</script>
 </html>
